--- a/css/styles.sass
+++ b/css/styles.sass
@@ -971,6 +971,11 @@ body
   position: fixed
   top: 0
   z-index: 998
+#block_video
+  #video
+    text-align: center
+    iframe
+      box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.32)
 #block_order
   position: relative
   .wrapper
