--- a/css/styles.css
+++ b/css/styles.css
@@ -1122,7 +1122,13 @@ body .accordion_header {
 #block_video #video {
   text-align: center; }
   #block_video #video iframe {
+    width: 840px;
+    height: 472px;
     box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.32); }
+    @media (max-width: 840px) {
+      #block_video #video iframe {
+        width: 100vw;
+        height: 56vw; } }
 
 #block_order {
   position: relative; }
