--- a/css/styles.sass
+++ b/css/styles.sass
@@ -971,16 +971,16 @@ body
   position: fixed
   top: 0
   z-index: 998
-#block_video
-  #video
-    text-align: center
-    iframe
-      width: 840px
-      height: 472px
-      box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.32)
-      @media (max-width: 840px)
-        width: 100vw
-        height: 56vw
+//#block_video
+//  #video
+//    text-align: center
+//    iframe
+//      width: 840px
+//      height: 472px
+//      box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.32)
+//      @media (max-width: 840px)
+//        width: 100vw
+//        height: 56vw
 #block_order
   position: relative
   .wrapper
@@ -1014,17 +1014,6 @@ body
     width: 100%
     overflow: hidden
     position: absolute
-    video
-      min-width: 100%
-      min-height: 100%
-      width: auto
-      height: auto
-      position: absolute
-      top: 50%
-      left: 50%
-      transform: translate(-50%,-50%)
-      @media (max-width: 899px)
-        display: none
 #sidenav-overlay
   position: fixed
   top: 0
